<resources>
    <string name="app_name">WeatherApplication</string>
    <string name="Title">Weather Details</string>
    <string name="LatitudeTitle">"Latitude "</string>
    <string name="Latitude"></string>
    <string name="LongitudeTitle">Longitude </string>
    <string name="Longitude"></string>
    <string name="TemperatureTitle">"Temperature "</string>
    <string name="Temperature"></string>
    <string name="WindspeedTitle">"Wind Speed "</string>
    <string name="Windspeed"></string>
    <string name="WindDirectionTitle">"Wind Direction "</string>
    <string name="WindDirection"></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="latitudeInput" />
    <string name="longitudeInput" />
    <string name="LocationTitle">Location</string>
    <string name="Location" />
</resources>