<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- TODO: Update blank fragment layout -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                >

                <Button
                    android:id="@+id/btnCurrentLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Weather Details for Current Location"
                    android:textSize="20sp"
                    android:layout_margin="5dp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/etLatitudeInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/latitudeInput"
                        android:inputType="numberSigned"
                        android:textSize="20sp"
                        android:layout_margin="5dp"
                        android:hint="latitude"
                        />
                    <EditText
                        android:id="@+id/etLongitudeInput"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/longitudeInput"
                        android:inputType="numberSigned"
                        android:textSize="20sp"
                        android:layout_margin="5dp"
                        android:hint="longitude"
                        />
                </LinearLayout>

                <Button
                    android:id="@+id/btnCustomLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Weather Details for Custom Location"
                    android:textSize="20sp"
                    android:layout_margin="5dp"
                    />

            </LinearLayout>


            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/Title"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="10dp"
                android:layout_weight="1"

                android:background="@android:color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tvLocationTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/LocationTitle"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Location" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/tvLatitudeTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/LatitudeTitle"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvLatitude"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Latitude" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="5dp"
                    app:layout_constraintLeft_toRightOf="@id/cv1"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/tvLongitudeTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/LongitudeTitle"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvLongitude"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Longitude" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="5dp"
                    app:layout_constraintLeft_toRightOf="@id/cv3"
                    app:layout_constraintTop_toBottomOf="@id/cv2">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/tvWindspeedTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/WindspeedTitle"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvWindspeed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Windspeed" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="5dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cv1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/tvTemperatureTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/TemperatureTitle"
                            android:textColor="@color/black"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvTemperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Temperature" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:layout_margin="10dp"

                android:background="@android:color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp"
                app:layout_constraintTop_toBottomOf="@id/cv3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tvWindDirectionTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/WindDirectionTitle"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvWindDirection"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/WindDirection" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>